[package]
name = "barn"
version = "0.1.0"
authors = ["kayyagari <kayyagari@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mdbx-sys = "0.7.1"
rmp-serde = "0.14.4"
serde = {version="1.0.118", features = ["derive"]}
serde_json = "1.0.61"
jsonschema = "0.3.1"
thiserror = "1.0.21"
lmdb-rkv = "0.14.0"
log = "0.4.11"
log4rs = "0.13"
actix-web = "3.3.2"
lazy_static = "1.4.0"
clap = "2.33.3"
jsonschema-valid = "0.4.0"
jsonpath_lib = "0.2.5"
futures = "0.3.8"
sqlparser = "0.7.0"
chrono = "0.4.19"

#[target.'cfg(unix)'.dev-dependencies]
#jemallocator = "0.3.2"
